Add daily note functionalities for mood, habits, and evening reflection

--- a/notes/2025-05-26.md
+++ b/notes/2025-05-26.md
@@ -6,3 +6,21 @@
 - ⚡ Niveau d’énergie (1 à 5) : 3
 - 🌤 Météo : soleil
 - ☕ Café du matin ? : oui
+
+
+
+## 📍- **Habitudes :**
+
+- [ ] 🛌 - 8h de sommeil
+- [x] 🍶 - Boire 1,5 L d'eau - nombre de gourdes : 3
+- [x] 📖 - Lire 15 min
+- [x] ♟️ - Leçon échec
+- [x] 📱 - Temps d'écran : 3h
+
+## 📍- **Habitudes :**
+
+- [ ] 🛌 - 8h de sommeil
+- [x] 🍶 - Boire 1,5 L d'eau - nombre de gourdes : 2
+- [x] 📖 - Lire 15 min
+- [x] ♟️ - Leçon échec
+- [x] 📱 - Temps d'écran : 2h15
